discord-ticket-bot/bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-ticket-bot
spec:
  selector:
    matchLabels:
      app: discord-ticket-bot
  template:
    metadata:
      labels:
        app: discord-ticket-bot
    spec:
      securityContext:
        fsGroup: 1000 
      containers:
      - name: discord-ticket-bot
        securityContext:
          runAsUser: 1000 
          runAsGroup: 1000
        image: eartharoid/discord-tickets:4.0
        stdin: true
        tty: true
        ports:
        - containerPort: 8169
        volumeMounts:
        - name: discord-ticket-bot-pvc
          mountPath: /home/container/user
        # - name: timezone
        #   mountPath: /etc/timezone
        #   readOnly: true
        # - name: localtime
        #   mountPath: /etc/localtime
        #   readOnly: true
      volumes:
      - name: discord-ticket-bot-pvc
        persistentVolumeClaim:
          claimName: discord-ticket-bot
      # - name: timezone
      #   hostPath:
      #     path: /etc/timezone
      #     type: File
      # - name: localtime
      #   hostPath:
      #     path: /etc/localtime
      #     type: File
