discord-ticket-bot/bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-ticket-bot
spec:
  type: ClusterIP
  selector:
    app: discord-ticket-bot
  ports:
    - protocol: TCP
      port: 8169
      targetPort: 8169
