discord-ticket-bot/bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-ticket-bot
  namespace: discord-ticket-bot
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - dtb.lag0.com.br
    secretName: lag0-discord-ticket-bot-certificate
  rules:
  - host: dtb.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discord-ticket-bot
            port:
              number: 9000
  ingressClassName: nginx
